# agentic-insight

./: .env  AGENTS.md  ChangeLog.md  README.md  article.md  mapping.yaml  mappings.db  mappings_db.txt  pyproject.toml  report-high-risk-loan.md  report.md  wiki.db  wiki_db.txt  writeup.md
api/: main.py  tools.py  utils.py  workflow.py
app/: agent.py  cli.py  config.py  dataset.py  db.py  ontology.py  wiki.py
app/prompt/: mapping_prompt.txt
mcp/: duckdb_server.py
ontology/: AboutFIBODev.rdf  AboutFIBOProd.rdf  AboutFIBOProd.ttl
ontology/fibo/ontology/: LOAN
ontology/fibo/ontology/master/latest/: AboutFIBODev.ttl  MetadataFIBO.ttl  catalog-v001.xml
ontology/fibo/ontology/master/latest/ACTUS/: ACTUSContractTerms.ttl  ACTUSTaxonomy.ttl  ACTUSTermApplicabilityMapping.ttl  MetadataACTUS.ttl
ontology/fibo/ontology/master/latest/BE/: MetadataBE.ttl
ontology/fibo/ontology/master/latest/BP/: MetadataBP.ttl
ontology/fibo/ontology/master/latest/CAE/: MetadataCAE.ttl
ontology/fibo/ontology/master/latest/DER/: MetadataDER.ttl
ontology/fibo/ontology/master/latest/FBC/: MetadataFBC.ttl
ontology/fibo/ontology/master/latest/MD/: MetadataMD.ttl
scripts/: list_db.py  md_to_pdf.py
skills/doc-retrieval-skill/: SKILL.md
skills/duckdb-skill/: SKILL.md
skills/tabular-retrieval-skill/: SKILL.md
skills/workflow-skill/: SKILL.md
static/: app.js  index.html  style.css
tests/: test_api.py  test_list_db.py  test_md_to_pdf.py  test_wiki.py  test_workflow.py
wiki/: Residential mortgage underwriting practices and procedures  Guideline 2017.md  coverage_report.txt
(+236 files in other folders)
