[project]
name = "agentic-insight"
version = "0.1.0"
description = "A Google ADK-based agent workflow engine to map FIBO ontologies to dataset columns."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk[extensions]>=2.3.0",
    "rdflib>=7.6.0",
    "duckdb>=1.5.4",
    "pydantic>=2.10",
    "python-dotenv>=1.0.1",
    "click>=8.0",
    "pyyaml>=6.0",
    "markitdown[pdf]",
    "markdown-pdf>=1.13.2",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
